--- a/DAT_13_Final Project-JP.ipynb
+++ b/DAT_13_Final Project-JP.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:40664d5419c234eaf3047988af386fe56e26a5af20ce517c478a69214de9a2a0"
+  "signature": "sha256:e5a63a0ad90192e4736581f755c673ce63cc0600bca118676747749c39949f4c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -73,7 +73,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -88,26 +88,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "ename": "IOError",
-       "evalue": "File spray.csv does not exist",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mIOError\u001b[0m                                   Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-2-88438e4a3c9f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#Reading the data, data acquired from kaggle competition\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mspray\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'spray.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mweather\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'weather.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mtrain\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'train.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mtest\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'test.csv'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;32m/home/jerd/ENTER/lib/python2.7/site-packages/pandas/io/parsers.pyc\u001b[0m in \u001b[0;36mparser_f\u001b[1;34m(filepath_or_buffer, sep, dialect, compression, doublequote, escapechar, quotechar, quoting, skipinitialspace, lineterminator, header, index_col, names, prefix, skiprows, skipfooter, skip_footer, na_values, na_fvalues, true_values, false_values, delimiter, converters, dtype, usecols, engine, delim_whitespace, as_recarray, na_filter, compact_ints, use_unsigned, low_memory, buffer_lines, warn_bad_lines, error_bad_lines, keep_default_na, thousands, comment, decimal, parse_dates, keep_date_col, dayfirst, date_parser, memory_map, nrows, iterator, chunksize, verbose, encoding, squeeze, mangle_dupe_cols, tupleize_cols, infer_datetime_format)\u001b[0m\n\u001b[0;32m    450\u001b[0m                     infer_datetime_format=infer_datetime_format)\n\u001b[0;32m    451\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 452\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0m_read\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    453\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    454\u001b[0m     \u001b[0mparser_f\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__name__\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;32m/home/jerd/ENTER/lib/python2.7/site-packages/pandas/io/parsers.pyc\u001b[0m in \u001b[0;36m_read\u001b[1;34m(filepath_or_buffer, kwds)\u001b[0m\n\u001b[0;32m    232\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    233\u001b[0m     \u001b[1;31m# Create the parser.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 234\u001b[1;33m     \u001b[0mparser\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mTextFileReader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilepath_or_buffer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    235\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    236\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mnrows\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mNone\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mchunksize\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;32m/home/jerd/ENTER/lib/python2.7/site-packages/pandas/io/parsers.pyc\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, f, engine, **kwds)\u001b[0m\n\u001b[0;32m    540\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'has_index_names'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mkwds\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'has_index_names'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    541\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 542\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_make_engine\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mengine\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    543\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    544\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_get_options_with_defaults\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mengine\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;32m/home/jerd/ENTER/lib/python2.7/site-packages/pandas/io/parsers.pyc\u001b[0m in \u001b[0;36m_make_engine\u001b[1;34m(self, engine)\u001b[0m\n\u001b[0;32m    677\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_make_engine\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mengine\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'c'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    678\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mengine\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'c'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 679\u001b[1;33m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mCParserWrapper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    680\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    681\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mengine\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'python'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;32m/home/jerd/ENTER/lib/python2.7/site-packages/pandas/io/parsers.pyc\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, src, **kwds)\u001b[0m\n\u001b[0;32m   1039\u001b[0m         \u001b[0mkwds\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'allow_leading_cols'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex_col\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mFalse\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1040\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1041\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_reader\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_parser\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTextReader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msrc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwds\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1042\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1043\u001b[0m         \u001b[1;31m# XXX\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-        "\u001b[1;32m/home/jerd/ENTER/lib/python2.7/site-packages/pandas/parser.so\u001b[0m in \u001b[0;36mpandas.parser.TextReader.__cinit__ (pandas/parser.c:3218)\u001b[1;34m()\u001b[0m\n",
-        "\u001b[1;32m/home/jerd/ENTER/lib/python2.7/site-packages/pandas/parser.so\u001b[0m in \u001b[0;36mpandas.parser.TextReader._setup_parser_source (pandas/parser.c:5594)\u001b[1;34m()\u001b[0m\n",
-        "\u001b[1;31mIOError\u001b[0m: File spray.csv does not exist"
-       ]
-      }
-     ],
-     "prompt_number": 2
+     "outputs": [],
+     "prompt_number": 6
     },
     {
      "cell_type": "heading",
@@ -133,7 +115,23 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "<class 'pandas.core.frame.DataFrame'>\n",
+        "Int64Index: 14835 entries, 0 to 14834\n",
+        "Data columns (total 4 columns):\n",
+        "Date         14835 non-null object\n",
+        "Time         14251 non-null object\n",
+        "Latitude     14835 non-null float64\n",
+        "Longitude    14835 non-null float64\n",
+        "dtypes: float64(2), object(2)"
+       ]
+      }
+     ],
+     "prompt_number": 7
     },
     {
      "cell_type": "code",
@@ -143,7 +141,74 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "html": [
+        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
+        "<table border=\"1\" class=\"dataframe\">\n",
+        "  <thead>\n",
+        "    <tr style=\"text-align: right;\">\n",
+        "      <th></th>\n",
+        "      <th>Date</th>\n",
+        "      <th>Time</th>\n",
+        "      <th>Latitude</th>\n",
+        "      <th>Longitude</th>\n",
+        "    </tr>\n",
+        "  </thead>\n",
+        "  <tbody>\n",
+        "    <tr>\n",
+        "      <th>0</th>\n",
+        "      <td> 2011-08-29</td>\n",
+        "      <td> 6:56:58 PM</td>\n",
+        "      <td> 42.391623</td>\n",
+        "      <td>-88.089163</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>1</th>\n",
+        "      <td> 2011-08-29</td>\n",
+        "      <td> 6:57:08 PM</td>\n",
+        "      <td> 42.391348</td>\n",
+        "      <td>-88.089163</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>2</th>\n",
+        "      <td> 2011-08-29</td>\n",
+        "      <td> 6:57:18 PM</td>\n",
+        "      <td> 42.391022</td>\n",
+        "      <td>-88.089157</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>3</th>\n",
+        "      <td> 2011-08-29</td>\n",
+        "      <td> 6:57:28 PM</td>\n",
+        "      <td> 42.390637</td>\n",
+        "      <td>-88.089158</td>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>4</th>\n",
+        "      <td> 2011-08-29</td>\n",
+        "      <td> 6:57:38 PM</td>\n",
+        "      <td> 42.390410</td>\n",
+        "      <td>-88.088858</td>\n",
+        "    </tr>\n",
+        "  </tbody>\n",
+        "</table>\n",
+        "</div>"
+       ],
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 8,
+       "text": [
+        "         Date        Time   Latitude  Longitude\n",
+        "0  2011-08-29  6:56:58 PM  42.391623 -88.089163\n",
+        "1  2011-08-29  6:57:08 PM  42.391348 -88.089163\n",
+        "2  2011-08-29  6:57:18 PM  42.391022 -88.089157\n",
+        "3  2011-08-29  6:57:28 PM  42.390637 -88.089158\n",
+        "4  2011-08-29  6:57:38 PM  42.390410 -88.088858"
+       ]
+      }
+     ],
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -159,7 +224,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 252,
+       "prompt_number": 9,
        "text": [
         "array([['2011-08-29', '6:56:58 PM', 42.3916233333333, -88.0891633333333],\n",
         "       ['2011-08-29', '6:57:08 PM', 42.3913483333333, -88.0891633333333],\n",
@@ -171,7 +236,7 @@
        ]
       }
      ],
-     "prompt_number": 252
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -193,7 +258,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 10,
+       "text": [
+        "'\\nfrom sklearn.feature_selection import VarianceThreshold\\nsel = VarianceThreshold(threshold=(.9 * (1 - .9)))\\nsel.fit_transform(weather.values)\\nweather.head()\\n'"
+       ]
+      }
+     ],
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
@@ -228,7 +303,7 @@
        ]
       }
      ],
-     "prompt_number": 254
+     "prompt_number": 11
     },
     {
      "cell_type": "code",
@@ -262,7 +337,7 @@
        ]
       }
      ],
-     "prompt_number": 255
+     "prompt_number": 12
     },
     {
      "cell_type": "heading",
@@ -451,7 +526,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 257,
+       "prompt_number": 13,
        "text": [
         "   Station        Date  Tmax  Tmin Tavg Depart  DewPoint WetBulb Heat Cool  \\\n",
         "0        1  2007-05-01    83    50   67     14        51      56    0    2   \n",
@@ -478,7 +553,7 @@
        ]
       }
      ],
-     "prompt_number": 257
+     "prompt_number": 13
     },
     {
      "cell_type": "code",
@@ -503,7 +578,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 258
+     "prompt_number": 14
     },
     {
      "cell_type": "code",
@@ -673,7 +748,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 259,
+       "prompt_number": 15,
        "text": [
         "         Date  Tmax  Tmin Tavg Depart  DewPoint WetBulb Heat Cool Sunrise  \\\n",
         "0  2007-05-01    83    50   67     14        51      56    0    2    0448   \n",
@@ -700,7 +775,7 @@
        ]
       }
      ],
-     "prompt_number": 259
+     "prompt_number": 15
     },
     {
      "cell_type": "code",
@@ -714,7 +789,53 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "<class 'pandas.core.frame.DataFrame'>\n",
+        "Int64Index: 21012 entries, 0 to 21011\n",
+        "Data columns (total 34 columns):\n",
+        "Date                      21012 non-null object\n",
+        "Address                   21012 non-null object\n",
+        "Species                   21012 non-null object\n",
+        "Block                     21012 non-null int64\n",
+        "Street                    21012 non-null object\n",
+        "Trap                      21012 non-null object\n",
+        "AddressNumberAndStreet    21012 non-null object\n",
+        "Latitude                  21012 non-null float64\n",
+        "Longitude                 21012 non-null float64\n",
+        "AddressAccuracy           21012 non-null int64\n",
+        "NumMosquitos              21012 non-null int64\n",
+        "WnvPresent                21012 non-null int64\n",
+        "Tmax                      21012 non-null int64\n",
+        "Tmin                      21012 non-null int64\n",
+        "Tavg                      21012 non-null object\n",
+        "Depart                    21012 non-null object\n",
+        "DewPoint                  21012 non-null int64\n",
+        "WetBulb                   21012 non-null object\n",
+        "Heat                      21012 non-null object\n",
+        "Cool                      21012 non-null object\n",
+        "Sunrise                   21012 non-null object\n",
+        "Sunset                    21012 non-null object\n",
+        "CodeSum                   21012 non-null object\n",
+        "Depth                     21012 non-null object\n",
+        "Water1                    21012 non-null object\n",
+        "SnowFall                  21012 non-null object\n",
+        "PrecipTotal               21012 non-null object\n",
+        "StnPressure               21012 non-null object\n",
+        "SeaLevel                  21012 non-null object\n",
+        "ResultSpeed               21012 non-null float64\n",
+        "ResultDir                 21012 non-null int64\n",
+        "AvgSpeed                  21012 non-null object\n",
+        "S_lat                     21012 non-null float64\n",
+        "S_long                    21012 non-null float64\n",
+        "dtypes: float64(5), int64(8), object(21)"
+       ]
+      }
+     ],
+     "prompt_number": 16
     },
     {
      "cell_type": "code",
@@ -752,7 +873,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 17
     },
     {
      "cell_type": "code",
@@ -764,7 +886,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 267
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -935,7 +1057,7 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 270,
+       "prompt_number": 19,
        "text": [
         "         Date                                            Address  \\\n",
         "0  2007-05-29  4100 North Oak Park Avenue, Chicago, IL 60634,...   \n",
@@ -976,7 +1098,7 @@
        ]
       }
      ],
-     "prompt_number": 270
+     "prompt_number": 19
     },
     {
      "cell_type": "markdown",
